--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,8 @@
 \*-----------------------------------*/
 
 /**
- * copyright 2022 codewithsadee
+ * copyright 2023 Visionary Technologies Enterprise
  */
-
-
-
-
 
 /*-----------------------------------*\
   #CUSTOM PROPERTY
