--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -668,6 +668,101 @@ body {
 
 .faq-card .card-action.active + .card-content { max-height: 500px; }
 
+/*-----------------------------------*\
+  #CONTACT
+\*-----------------------------------*/
+.contact-container
+{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 20px 100px;
+}
+.contact-container:after
+{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url();
+  background-size: cover;
+  z-index: -1;
+  filter: blur(50px);
+}
+.contact-box
+{
+  max-width: 850px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: var(--bg-color);
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+}
+
+.left
+{
+  height: 100%;
+  background: url(../images/contact-us.jpg);
+  background-size: cover;
+}
+
+.right
+{
+  padding: 25px 40px;
+}
+
+.field
+{
+  width: 100%;
+  padding: 0.5rem 1rem;
+  outline: none;
+  border: 2px solid rgba(0, 0, 0, 0);
+  background-color: rgba();
+  font-size: var(--fs-11);
+  margin-bottom: 22px;
+  transition: .3s;
+}
+
+.field:hover
+{
+  background-color: rgba();
+}
+
+.field:focus
+{
+  background-color: var(--white);
+  border: 2px solid rgba(0, 21, 83, 0.47);
+}
+
+.area
+{
+  min-height: 150px;
+}
+
+.btn
+{
+  width: 100%;
+  padding: 0.5rem 1rem;
+  font-size: 1.1rem;
+  background-color: #eeff00;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  color: var(--black);
+  transition: .3s;
+}
+
+.btn:hover{
+  background-color: var(--white);
+}
+
 
 
 
@@ -932,7 +1027,18 @@ body {
 }
 
 
+@media screen and (max-width: 880px)
+{
+  .contact-box
+  {
+    grid-template-columns: 1fr;
+  }
 
+  .left
+  {
+    height: 200px;
+  }
+}
 
 
 /**
