--- a/assets/css/applicationpage.css
+++ b/assets/css/applicationpage.css
@@ -40,7 +40,7 @@ body{
 
 .wrapper .form .inputfield label{
    width: 200px;
-   color: #757575;
+   color: #000000;
    margin-right: 10px;
   font-size: 14px;
 }
@@ -96,51 +96,12 @@ body{
 .wrapper .form .inputfield .input:focus,
 .wrapper .form .inputfield .textarea:focus,
 .wrapper .form .inputfield .custom_select select:focus{
-  border: 1px solid #fec107;
+  border: 1px solid hsl(145, 63%, 42%);;
 }
 
 .wrapper .form .inputfield p{
    font-size: 14px;
    color: #757575;
-}
-.wrapper .form .inputfield .check{
-  width: 15px;
-  height: 15px;
-  position: relative;
-  display: block;
-  cursor: pointer;
-}
-.wrapper .form .inputfield .check input[type="checkbox"]{
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-}
-.wrapper .form .inputfield .check .checkmark{
-  width: 15px;
-  height: 15px;
-  border: 1px solid #fec107;
-  display: block;
-  position: relative;
-}
-.wrapper .form .inputfield .check .checkmark:before{
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 2px;
-  width: 5px;
-  height: 2px;
-  border: 2px solid;
-  border-color: transparent transparent #fff #fff;
-  transform: rotate(-45deg);
-  display: none;
-}
-.wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark{
-  background: #fec107;
-}
-
-.wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark:before{
-  display: block;
 }
 
 .wrapper .form .inputfield .btn{
@@ -148,7 +109,7 @@ body{
    padding: 8px 10px;
   font-size: 15px; 
   border: 0px;
-  background:  #fec107;
+  background:  hsl(145, 63%, 42%);;
   color: #fff;
   cursor: pointer;
   border-radius: 3px;
@@ -156,16 +117,14 @@ body{
 }
 
 .wrapper .form .inputfield .btn:hover{
-  background: #ffd658;
+  background: hsl(145, 63%, 42%);;
 }
 
 .wrapper .form .inputfield:last-child{
   margin-bottom: 0;
 }
 
-p{
-    color: black;
-}
+
 
 @media (max-width:420px) {
   .wrapper .form .inputfield{
